--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.9.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "tradingview-widget": "^0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
