--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.24",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
